--- a/css/app.css
+++ b/css/app.css
@@ -16,7 +16,7 @@ html {
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 html {
@@ -40,7 +40,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
 }
 
 .header {
@@ -52,37 +53,58 @@ h1 {
     font-weight: 300;
     font-size: 3.5rem;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.15em;
     color: #02a99b;
 }
 
-/* Styles for Section Cards */
 
-.section-card {
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(150deg, #08d1c4 0%, #827ecd 100%);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* Styles for Info Panel */
 
+.info-panel {
+    text-align: left;
+    max-width: 60rem;
+    margin-bottom: 2rem;
 }
+
+.stars,
+.moves,
+.timer {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    margin-right: 3rem;
+}
+
+.stars li {
+    list-style: none;
+    display: inline-block;
+    color: #ffcd04;
+}
+
+.restart {
+    float: right;
+    cursor: pointer;
+}
+
+
+/* Styles for Card Deck */
 
 .deck {
     height: 100%;
-    max-width: 120rem;
-    padding: 2rem 3rem;
+    width: 100%;
+    background: linear-gradient(165deg, #2cc6bb 10%, #827ecd 100%);
+    padding: 3rem 8%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-content: space-around;
+    flex-grow: 1;
 }
 
-.deck .card {
+.card {
     height: 15rem;
     width: 15rem;
-    margin: 0 2rem;
+    margin: 1rem 2rem;
     background: linear-gradient(180deg, #31e6d9 0%, #31e6d9 25%,#19c7f7 25%, #19c7f7 75%, #889df0 75%, #9490ed 100%);
     color: #fff;
     font-size: 0;
@@ -91,48 +113,22 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 4px 2px 2rem 0 rgba(37, 89, 131, 0.4);
+    box-shadow: 4px 2px 1.5rem 0 rgba(37, 89, 131, 0.4);
 }
 
-.deck .card.open {
+.card.open {
     transform: rotateY(0);
     background: #19c7f7;
     cursor: default;
 }
 
-.deck .card.show {
+.card.show,
+.card.match {
     font-size: 6rem;
 }
 
-.deck .card.match {
+.card.match {
     cursor: default;
-    background: #02d7c5;
-    font-size: 6rem;
+    background: #21dece;
 }
 
-/* Styles for Section Info */
-
-.section-info {
-    text-align: left;
-    width: 60rem;
-    margin-bottom: 2rem;
-}
-
-.section-info .stars,
-.section-info .moves,
-.section-info .timer {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    margin: 0 3rem 0 0;
-}
-
-.section-info .stars li {
-    list-style: none;
-    display: inline-block;
-}
-
-.section-info .restart {
-    float: right;
-    cursor: pointer;
-}
