--- a/css/queries.css
+++ b/css/queries.css
@@ -24,6 +24,7 @@
 
 	.info-panel {
 		width: 95%;
+		margin-bottom: 1rem;
 	}
 
 	.stars,
@@ -40,8 +41,9 @@
 	}
 
 	.card {
-		height: 7rem;
-		width: 7rem;
+		height: 8rem;
+		width: 8rem;
+		margin: 1rem;
 		box-shadow: 2px 1px 1rem 0 rgba(37, 89, 131, 0.4);
 	}
 
@@ -57,8 +59,8 @@
 /*Small Phones max-width: 480px */
 @media screen and (max-width: 30em) {
 	.card {
-		height: 6rem;
-		width: 7rem;
+		height: 6.5rem;
+		width: 8rem;
 	}
 }
 
