--- a/css/app.css
+++ b/css/app.css
@@ -75,6 +75,11 @@ h1 {
     margin-right: 3rem;
 }
 
+.moves {
+    min-width: 7rem;
+    text-align: left;
+}
+
 .stars li {
     list-style: none;
     display: inline-block;
@@ -99,7 +104,7 @@ h1 {
     justify-content: center;
     align-content: space-around;
     flex-grow: 1;
-    perspective: 400rem;
+    perspective: 300rem;
 }
 
 .card {
@@ -117,7 +122,7 @@ h1 {
     box-shadow: 4px 2px 1rem 0 rgba(37, 89, 131, 0.4);
     transform-style: preserve-3d;
     transform: rotateY(0);
-    transition: font-size 0.2s, transform 0.6s cubic-bezier(0,.78,.37,1.21), background 0.5s;
+    transition: font-size 0.1s, transform 1s cubic-bezier(0,.78,.37,1.21), background 0.4s;
     
 }
 
@@ -140,12 +145,3 @@ h1 {
     cursor: default;
     background: #3ae1d3;
 }
-/* 
-@keyframes flip {
-    /* 0% {
-        transform: rotateY(0);
-    } */
-    /* 100% {
-        transform: rotateY(180deg);
-    }
-} */ */
