--- a/css/app.css
+++ b/css/app.css
@@ -62,7 +62,7 @@ h1 {
 
 .info-panel {
     text-align: left;
-    max-width: 60rem;
+    min-width: 60rem;
     margin-bottom: 2rem;
 }
 
@@ -80,10 +80,15 @@ h1 {
     text-align: left;
 }
 
-.stars li {
+.star {
     list-style: none;
     display: inline-block;
     color: #ffcd04;
+}
+
+.star-removed {
+    opacity: 0.5;
+    color: #c9c7bf;
 }
 
 .restart {
@@ -122,7 +127,7 @@ h1 {
     box-shadow: 4px 2px 1rem 0 rgba(37, 89, 131, 0.4);
     transform-style: preserve-3d;
     transform: rotateY(0);
-    transition: font-size 0.1s, transform 1s cubic-bezier(0,.78,.37,1.21), background 0.4s;
+    transition: font-size 0.1s, transform 0.6s cubic-bezier(0,.78,.37,1.21), background 0.4s;
     
 }
 
