--- a/css/app.css
+++ b/css/app.css
@@ -149,4 +149,41 @@ h1 {
 .card.match {
     cursor: default;
     background: #3ae1d3;
+    animation: jelly 0.8s 0.2s;
+    font-size: 6rem;
 }
+
+/* Animation */
+
+@keyframes jelly {
+    0%, 100% {
+      transform: scale3d(1, 1, 1);
+    }
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      transform: scale3d(.95, 1.05, 1);
+    }
+    75% {
+      transform: scale3d(1.05, .95, 1);
+    }
+}
+ 
+/* @keyframes shake {
+    0%, 100% {
+    transform: translate3d(0, 0, 0);
+    }
+    10%, 30%, 70% {
+    transform: translate3d(-1rem, 0, 0);
+    }
+    20%, 40%, 80% {
+    transform: translate3d(1rem, 0, 0);
+    }
+} */
