--- a/css/app.css
+++ b/css/app.css
@@ -130,9 +130,9 @@ h1 {
     transition: font-size 0.1s, transform 0.6s cubic-bezier(0,.78,.37,1.21), background 0.4s;
 }
 
-/* .card i {
+.card i {
     transform: rotateY(180deg);
-} */
+}
 
 .card.open {
     transform: rotateY(180deg);
