--- a/css/app.css
+++ b/css/app.css
@@ -151,6 +151,53 @@ h1 {
     animation: jelly 0.9s 0.2s;
 }
 
+
+/* Congrats Modal */
+.modal-congrats {
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    min-width: 60rem;
+    min-height: 40rem;
+    border-radius: 1rem;
+    position: fixed;
+    background: rgb(243, 252, 255);
+    padding: 4rem;
+    animation: bounceIn 0.6s 0.2s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+}
+
+.trophy {
+}
+
+/* The Close Button */
+.modal-close {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    z-index: 2;
+    font-size: 3rem;
+    color: #2abbb9;
+    transition : ease-in 0.1s;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: #06dda4;
+    text-decoration: none;
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
 /* Animation */
 
 @keyframes jelly {
@@ -163,17 +210,32 @@ h1 {
     40% {
       transform: scale3d(0.75, 1.25, 1);
     }
-    50% {
-      transform: scale3d(1.15, 0.85, 1);
-    }
-    65% {
-      transform: scale3d(.95, 1.05, 1);
-    }
-    75% {
-      transform: scale3d(1.05, .95, 1);
-    }
 }
  
+@keyframes bounceIn {
+    0% {
+        opacity: 0;
+        transform: scale3d(.3, .3, .3);
+    }
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        opacity: 1;
+        transform: scale3d(.9, .9, .9);
+    }
+    60% {
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        transform: scale3d(.97, .97, .97);
+    }
+    100% {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
 /* @keyframes shake {
     0%, 100% {
     transform: translate3d(0, 0, 0);
