--- a/css/app.css
+++ b/css/app.css
@@ -48,13 +48,26 @@ body {
     padding: 2rem;
 }
 
+/* Styles for Typography*/
+
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    font-size: 3.5rem;
+    font-size: 3.2rem;
     text-transform: uppercase;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.1em;
     color: #02a99b;
+}
+
+h3 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+h6 {
+    font-size: 1.8rem;
+    font-weight: bold;
 }
 
 
@@ -167,7 +180,8 @@ h1 {
 }
 
 .modal-content {
-    min-width: 60rem;
+    text-align: center;
+    min-width: 50rem;
     min-height: 40rem;
     border-radius: 1rem;
     position: fixed;
@@ -176,10 +190,38 @@ h1 {
     animation: bounceIn 0.6s 0.2s cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
-.trophy {
+.congrats-svg {
+    width: 10rem;
+    margin-bottom : 1rem;
 }
 
+.congrats-info {
+    padding: 0.5rem 2rem;
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.congrats-item {
+    text-align: left;
+}
+
+.modal-replayBtn {
+    display: block;
+    margin : 1rem auto;
+    padding: 1rem 2rem;
+    min-width: 4rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: #19c7f7;
+    color: #fff;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+	letter-spacing: 0.1rem;
+}
+
+
 /* The Close Button */
+
 .modal-close {
     position: absolute;
     right: 2rem;
