--- a/css/queries.css
+++ b/css/queries.css
@@ -63,6 +63,15 @@
 		top: 1rem;
 	}
 
+	.congrats-svg {
+		width: 8rem;
+	}
+	
+	.congrats-info {
+		margin: 0;
+	}
+	
+
 /*Small Phones max-width: 480px */
 @media screen and (max-width: 30em) {
 	.card {
