--- a/css/app.css
+++ b/css/app.css
@@ -167,6 +167,7 @@ h6 {
 
 /* Congrats Modal */
 .modal-congrats {
+    display: none;
     z-index: 1;
     position: fixed;
     left: 0;
@@ -174,20 +175,19 @@ h6 {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.2);
-    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
+    position: relative;
     text-align: center;
     min-width: 50rem;
     min-height: 40rem;
     border-radius: 1rem;
-    position: fixed;
     background: rgb(243, 252, 255);
     padding: 4rem;
-    animation: bounceIn 0.6s 0.2s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    animation: bounceIn 0.6s cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
 .congrats-svg {
@@ -217,6 +217,10 @@ h6 {
     font-size: 1.6rem;
     text-transform: uppercase;
 	letter-spacing: 0.1rem;
+}
+
+.modal-replayBtn:focus {
+    outline: none;
 }
 
 
@@ -255,21 +259,24 @@ h6 {
 }
  
 @keyframes bounceIn {
-    0% {
+    0%, 10% {
         opacity: 0;
-        transform: scale3d(.3, .3, .3);
+        transform: scale3d(0, 0, 0);
     }
     20% {
+        transform: scale3d(.5, .5, .5);
+    }
+    30% {
         transform: scale3d(1.1, 1.1, 1.1);
     }
-    40% {
+    50% {
         opacity: 1;
         transform: scale3d(.9, .9, .9);
     }
-    60% {
+    70% {
         transform: scale3d(1.03, 1.03, 1.03);
     }
-    80% {
+    90% {
         transform: scale3d(.97, .97, .97);
     }
     100% {
