--- a/css/app.css
+++ b/css/app.css
@@ -130,7 +130,7 @@ h6 {
     justify-content: center;
     align-content: space-around;
     flex-grow: 1;
-    perspective: 300rem;
+    perspective: 400rem;
 }
 
 .card {
@@ -146,20 +146,15 @@ h6 {
     justify-content: center;
     align-items: center;
     box-shadow: 4px 2px 1rem 0 rgba(37, 89, 131, 0.4);
-    transform-style: preserve-3d;
-    transform: rotateY(0);
-    animation: flip 0.5s;
-    transition: font-size 0.1s, transform 0.6s cubic-bezier(0,.78,.37,1.21), background 0.4s;
-}
-
-.card i {
-    transform: rotateY(180deg);
+    transition: font-size 0.3s cubic-bezier(0,.78,.37,1.21); 
 }
 
 .card.open {
-    transform: rotateY(180deg);
+    transform: rotateY(0);
+    transform-style: preserve-3d;
     background: #22cfff;
     cursor: default;
+    animation: flip 0.8s ease-in-out;
 }
 
 .card.show,
@@ -171,7 +166,6 @@ h6 {
     cursor: default;
     background: #3ae1d3;
     animation: jelly 0.5s 0.2s;
-    transform: rotateY(180deg);
 }
 
 
@@ -196,9 +190,9 @@ h6 {
     min-width: 50rem;
     min-height: 30rem;
     border-radius: 1rem;
-    background: rgb(243, 252, 255);
+    background: #f3fcff;
     padding: 4rem;
-    animation: bounceIn 0.6s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    animation: bounceIn 0.6s cubic-bezier(0.21, 0.61, 0.35, 1);
 }
 
 .congrats-svg {
@@ -224,6 +218,7 @@ h6 {
 .info-summary {
     color: #09b7e7;
 }
+
 
 /* Modal Replay Button */
 
@@ -268,15 +263,35 @@ h6 {
 
 /* Animation */
 
+@keyframes flip {
+	0% {
+		transform: rotateY(90deg);
+		opacity: 0;
+	}
+	40% {
+        transform: rotateY(-15deg);
+		opacity: 1;
+	}
+	60% {
+		transform: rotateY(10deg);
+	}
+	80% {
+		transform: rotateY(-5deg);
+    }
+    100% {
+		transform: rotateY(0deg);
+	}
+}
+
 @keyframes jelly {
     0%, 100% {
       transform: scale3d(1, 1, 1);
     }
     30% {
-      transform: scale3d(1.25, 0.75, 1);
+      transform: scale3d(1.05, 0.9, 1);
     }
     40% {
-      transform: scale3d(0.75, 1.25, 1);
+      transform: scale3d(0.9, 1.05, 1);
     }
 }
  
@@ -306,4 +321,5 @@ h6 {
         transform: scale3d(1, 1, 1);
     }
 }
+
 
