--- a/css/queries.css
+++ b/css/queries.css
@@ -45,7 +45,8 @@
 		height: 8rem;
 		width: 8rem;
 		margin: 1rem;
-		box-shadow: 2px 1px 1rem 0 rgba(37, 89, 131, 0.4);
+		-webkit-box-shadow: 2px 1px 1rem 0 rgba(37, 89, 131, 0.4);
+		        box-shadow: 2px 1px 1rem 0 rgba(37, 89, 131, 0.4);
 	}
 
 	.card.show,
