--- a/css/app.css
+++ b/css/app.css
@@ -90,6 +90,7 @@ h6 {
     text-align: left;
     min-width: 60rem;
     margin-bottom: 2rem;
+    padding: 0 1rem;
 }
 
 .stars,
@@ -122,7 +123,7 @@ h6 {
 .restart {
     float: right;
     cursor: pointer;
-    color: #00a0da;
+    color: #00bdc1;
 }
 
 .restart:hover {
